# ZOS

./: .editorconfig  .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
doc/: Radl_doc.dvi  Radl_doc.tex
doc/figures/: LSB.pdf_tex  rozlozeni_fs.pdf_tex
include/: config.hpp  dirItem.hpp  dir_item.hpp  fileBitArray.hpp  fileSystem.hpp  inode.hpp  log.hpp  superBlock.hpp
src/: CMakeLists.txt  fileSystem.cpp  inode.cpp  log.cpp  superBlock.cpp
